# nonebot2-quickly-docker

./: Dockerfile  README.md  nqd_starter.sh
.github/workflows/: build_docker2hub.yaml
templates/: .env.prod  bot.py  pyproject.toml
