[project]
name = "nonebot2-quickly-docker"
version = "0.0.1"
description = "nonebot2-quickly-docker"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot-plugin-resolver", "nonebot_plugin_emojimix"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]